test/message/fail/missing-brace-after-function-body.out
*%(basename)s:6: SyntaxError: missing '}' after function body
  const x = 42;
              ^
SyntaxError: missing '}' after function body
